--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build (Electron)
         run: ELECTRON=true npx vite build
 
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+
       - name: Electron e2e tests
         run: xvfb-run --auto-servernum npx playwright test
 
