Electron desktop app (#10)
* add electron desktop app

* fixes and icons

* fix tests

* fix tests

* fix tests

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ node_modules/
 
 # Build output
 dist/
+dist-electron/
+release/
+
+# Local config (template is config.default.json)
+config.json
 
 # Vite
 *.local
