--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,20 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Build
+      - name: Build (web)
         run: npm run build
+
+      - name: Build (Electron)
+        run: ELECTRON=true npx vite build
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+
+      - name: Electron e2e tests
+        run: xvfb-run --auto-servernum npx playwright test
+
+      - uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: playwright-traces
+          path: test-results/
