--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "rowbinary-explorer",
   "private": true,
   "version": "0.0.1",
+  "description": "Interactive hex viewer for ClickHouse RowBinary and Native wire formats",
+  "author": "alex-clickhouse <alex.soffronow@clickhouse.com>",
   "type": "module",
   "main": "dist-electron/main.js",
   "scripts": {
